--- a/dashboard.html
+++ b/dashboard.html
@@ -1,208 +1,135 @@
 <!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Airtel Promo Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
-      background: white;
-      overflow-x: hidden;
-    }.background-logo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 250px;
-  opacity: 0.07;
-  filter: blur(8px);
-  animation: blink 4s infinite ease-in-out;
-  z-index: 0;
-  pointer-events: none;
-}
-
-@keyframes blink {
-  0%, 100% { opacity: 0.07; }
-  50% { opacity: 0.15; }
-}
-
-.content {
-  position: relative;
-  z-index: 1;
+      background-color: #ffffff;
+      background-image: url('your-logo.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 300px;
+      background-attachment: fixed;
+      animation: blinkLogo 4s infinite;
+    }@keyframes blinkLogo {
+  0% { opacity: 0.1; }
+  50% { opacity: 0.05; }
+  100% { opacity: 0.1; }
 }
 
 .header {
   background-color: #d90000;
   color: white;
   padding: 15px;
+  font-size: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.main-card {
-  background: rgba(255, 255, 255, 0.9);
-  margin: -20px 10px 10px;
+.balance-card {
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(8px);
+  margin: 20px;
+  padding: 15px;
   border-radius: 15px;
-  box-shadow: 0 0 10px #ccc;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.balance-card h2 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.balance-card p {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.eye {
+  cursor: pointer;
+}
+
+.buttons-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
   padding: 20px;
 }
 
-.user-info {
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.balance {
-  font-size: 20px;
-  margin-top: 10px;
-}
-
-.balance .eye {
-  color: red;
-  cursor: pointer;
-  margin-left: 5px;
-}
-
-.buttons-row {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 15px;
-}
-
 .btn {
-  background-color: #ffe5e5;
-  border: 1px solid #ffcccc;
-  color: #d90000;
+  background-color: #d90000;
+  color: white;
+  border: none;
+  padding: 15px;
+  font-size: 16px;
   border-radius: 10px;
-  padding: 10px;
-  flex: 1;
-  margin: 0 5px;
-  text-align: center;
-  font-size: 14px;
   cursor: pointer;
 }
 
-.banner {
-  margin: 10px auto;
-  border-radius: 10px;
-  width: 95%;
+.promo-banner, .update-banner {
+  width: 100%;
   display: none;
-}
-
-.section {
-  background: white;
-  border-radius: 10px;
-  margin: 10px;
-  padding: 10px;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-  text-align: center;
-  font-size: 12px;
-}
-
-.grid div {
-  padding: 10px;
-  cursor: pointer;
-  background: #f8f8f8;
-  border-radius: 10px;
-}
-
-.bottom-nav {
   position: fixed;
   bottom: 0;
   left: 0;
-  right: 0;
-  background: white;
-  border-top: 1px solid #ddd;
-  display: flex;
-  justify-content: space-around;
-  padding: 10px 0;
-  font-size: 12px;
+  z-index: 99;
+}
+
+.promo-banner img, .update-banner img {
+  width: 100%;
+  border-top: 3px solid #d90000;
 }
 
   </style>
 </head>
-<body>  <!-- Background Blurred Logo -->  <img src="your-logo.png" alt="Airtel Logo" class="background-logo">  <!-- Main Content -->  <div class="content">
-    <div class="header">
-      <div><b>Airtel Promo</b></div>
-      <div>
-        <img src="bell.png" alt="Bell" width="20">
-      </div>
-    </div><div class="main-card">
-  <div class="user-info" id="userName">Loading...</div>
-  <div id="userNumber">0000000000</div>
-  <div class="balance">
-    Account Balance: <span id="userBalance">₦0.00</span>
-    <span class="eye" onclick="toggleBalance()">👁️</span>
+<body>
+  <div class="header">
+    <span>Airtel Promo</span>
+    <span>🔔</span>
+  </div>  <div class="balance-card">
+    <h2>Welcome, <span id="username">User</span></h2>
+    <p>&#8358;<span id="balance">300.00</span> <span class="eye" onclick="toggleBalance()">👁️</span></p>
+  </div>  <div class="buttons-grid">
+    <a href="add-money.html" class="btn">Add Money</a>
+    <a href="buy-data.html" class="btn">Data Purchase</a>
+    <a href="airtime.html" class="btn">Airtime</a>
+    <a href="history.html" class="btn">History</a>
+  </div>  <div class="promo-banner" id="promoBanner">
+    <img src="promo-banner.png" alt="Promo">
   </div>
-  <div class="buttons-row">
-    <div class="btn" onclick="location.href='fund.html'">+ Add Money</div>
-    <div class="btn" onclick="location.href='withdraw.html'">Withdraw Cash</div>
-  </div>
-</div>
-
-<img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner">
-<img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner">
-
-<div class="section">
-  <b>Transfer & Cashout</b>
-  <div class="grid">
-    <div onclick="location.href='transfer.html'">Transfer Money</div>
-    <div onclick="location.href='fund.html'">Add Money</div>
-    <div onclick="location.href='withdraw.html'">Withdraw Cash</div>
-    <div onclick="location.href='services.html'">More Services</div>
-  </div>
-</div>
-
-<div class="section">
-  <b>Recharge & Bill Payments</b>
-  <div class="grid">
-    <div onclick="location.href='airtime.html'">Recharge Airtime</div>
-    <div onclick="location.href='bundle.html'">Buy Bundle</div>
-    <div onclick="location.href='bills.html'">Pay Bill</div>
-    <div onclick="location.href='electricity.html'">Electricity</div>
-  </div>
-</div>
-
-  </div>  <div class="bottom-nav">
-    <div onclick="location.href='dashboard.html'">🏠 Home</div>
-    <div onclick="location.href='scan.html'">📷 Scan</div>
-    <div onclick="location.href='history.html'">📄 History</div>
-    <div onclick="location.href='more.html'">☰ More</div>
+  <div class="update-banner" id="updateBanner">
+    <img src="update-banner.png" alt="Update">
   </div>  <script>
-    const user = JSON.parse(localStorage.getItem('user')) || {};
-    const balanceElement = document.getElementById('userBalance');
-    let isHidden = false;
+    // Username from signup
+    document.getElementById('username').innerText = localStorage.getItem('username') || 'User';
 
-    document.getElementById('userName').innerText = (user.name || 'USER').toUpperCase();
-    document.getElementById('userNumber').innerText = user.phone || '08000000000';
-    const balanceValue = user.balance ? `₦${user.balance}` : '₦300.00';
-    balanceElement.innerText = balanceValue;
-
+    // Toggle balance visibility
+    let showBalance = true;
     function toggleBalance() {
-      isHidden = !isHidden;
-      balanceElement.innerText = isHidden ? '••••••••' : balanceValue;
+      const balanceEl = document.getElementById('balance');
+      showBalance = !showBalance;
+      balanceEl.innerText = showBalance ? localStorage.getItem('balance') || '300.00' : '••••';
     }
 
-    const updateBanner = document.getElementById('updateBanner');
-    const promoBanner = document.getElementById('promoBanner');
-
-    function cycleBanners() {
-      updateBanner.style.display = 'block';
-      promoBanner.style.display = 'none';
+    // Promo and update banners display logic
+    window.onload = function() {
       setTimeout(() => {
-        updateBanner.style.display = 'none';
-        promoBanner.style.display = 'block';
-        setTimeout(cycleBanners, 10000); // Show promo for 10s
-      }, 5000); // Show update for 5s
+        document.getElementById('promoBanner').style.display = 'block';
+        setTimeout(() => {
+          document.getElementById('promoBanner').style.display = 'none';
+          document.getElementById('updateBanner').style.display = 'block';
+          setTimeout(() => {
+            document.getElementById('updateBanner').style.display = 'none';
+          }, 5000);
+        }, 10000);
+      }, 1000);
     }
-
-    cycleBanners();
   </script></body>
 </html>
