--- a/dashboard.html
+++ b/dashboard.html
@@ -1,138 +1,139 @@
-<!DOCTYPE html><html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
-  <title>Airtel Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Airtel Style Dashboard</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: white url('your-logo.png') no-repeat center center;
-      background-size: 300px;
-      background-blend-mode: lighten;
-      animation: blinkLogo 3s infinite;
-    }@keyframes blinkLogo {
-  0%, 100% { opacity: 0.07; }
-  50% { opacity: 0.03; }
-}
-
-header {
-  background-color: #d90000;
+      background: #f2f2f2;
+      overflow-x: hidden;
+    }.header {
+  background-color: #e60000;
   color: white;
-  padding: 15px;
+  padding: 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-header h1 {
+.header h2 {
   margin: 0;
-  font-size: 20px;
 }
 
-.balance-card {
-  background: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(8px);
-  margin: 20px;
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  color: #000;
+.glass-card {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 16px;
+  padding: 16px;
+  margin: 16px;
   position: relative;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.balance-card h2 {
-  margin: 0;
-  font-size: 18px;
+.glass-card::before {
+  content: "";
+  position: absolute;
+  background: url('your-logo.png') center/cover no-repeat;
+  opacity: 0.05;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.glass-card * {
+  position: relative;
+  z-index: 1;
 }
 
 .balance {
-  font-size: 28px;
-  margin: 10px 0;
+  font-size: 24px;
+  margin: 8px 0;
 }
 
-.eye {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 18px;
-  cursor: pointer;
+.actions {
+  display: flex;
+  justify-content: space-around;
+  margin: 16px;
+  flex-wrap: wrap;
 }
 
-.buttons-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 15px;
-  margin: 20px;
-}
-
-.buttons-grid a {
-  text-decoration: none;
-  background-color: #d90000;
+.action-button {
+  background-color: #e60000;
   color: white;
-  padding: 15px;
-  border-radius: 15px;
+  padding: 12px 24px;
+  border-radius: 12px;
+  text-decoration: none;
+  margin: 8px;
+  flex: 1 1 45%;
+  text-align: center;
+}
+
+.banners {
+  margin: 16px;
+}
+
+.banner {
+  display: none;
+  padding: 12px;
+  border-radius: 12px;
   text-align: center;
   font-weight: bold;
-  transition: transform 0.2s ease;
+  color: white;
 }
 
-.buttons-grid a:hover {
-  transform: scale(1.05);
+.update-banner {
+  background: #2d2d70;
 }
 
-.banner-container {
-  margin: 20px;
-  text-align: center;
-}
-
-.banner-container img {
-  width: 90%;
-  max-width: 300px;
-  border-radius: 12px;
-  display: none;
+.promo-banner {
+  background: #e60000;
 }
 
   </style>
-</head>
-<body>  <header>
-    <h1>Airtel Promo</h1>
+</head><body>
+  <div class="header">
+    <h2>Airtel Promo</h2>
     <span>🔔</span>
-  </header>  <div class="balance-card">
-    <h2 id="username">Welcome, </h2>
-    <p>08123456789</p>
-    <div class="balance" id="balance">₦0</div>
-    <div class="eye" onclick="toggleBalance()">👁️</div>
-  </div>  <div class="buttons-grid">
-    <a href="add-money.html">Add Money</a>
-    <a href="buy-data.html">Data Purchase</a>
-    <a href="airtime.html">Airtime</a>
-    <a href="history.html">History</a>
-  </div>  <div class="banner-container">
-    <img src="promo-image.png" id="promo" />
-    <img src="update-banner.png" id="update" />
+  </div>  <div class="glass-card">
+    <div><strong id="userName">User</strong></div>
+    <div id="userPhone">+234</div>
+    <div class="balance">
+      Balance: <span id="userBalance">₦0.00</span>
+    </div>
+  </div>  <div class="actions">
+    <a href="addmoney.html" class="action-button">Add Money</a>
+    <a href="withdraw.html" class="action-button">Withdraw</a>
+    <a href="#" class="action-button">Transfer</a>
+    <a href="#" class="action-button">Airtime</a>
+    <a href="#" class="action-button">Bundle</a>
+    <a href="#" class="action-button">Bills</a>
+  </div>  <div class="banners">
+    <div class="banner update-banner" id="updateBanner">Update Your Email ID</div>
+    <div class="banner promo-banner" id="promoBanner">Get up to 10% cashback on recharge</div>
   </div>  <script>
-    let balanceVisible = true;
-    let balance = localStorage.getItem("balance") || 300;
-    let user = JSON.parse(localStorage.getItem("user")) || { name: "User" };
+    // Load user data from localStorage
+    document.getElementById("userName").innerText = localStorage.getItem("user.name") || "EMMANUEL";
+    document.getElementById("userPhone").innerText = localStorage.getItem("user.phone") || "8124890070";
+    document.getElementById("userBalance").innerText = "₦" + (localStorage.getItem("user.balance") || "1.20");
 
-    document.getElementById("balance").innerText = `₦${balance}`;
-    document.getElementById("username").innerText = `Welcome, ${user.name}`;
+    // Banner rotation
+    const updateBanner = document.getElementById("updateBanner");
+    const promoBanner = document.getElementById("promoBanner");
 
-    function toggleBalance() {
-      balanceVisible = !balanceVisible;
-      document.getElementById("balance").innerText = balanceVisible ? `₦${balance}` : "••••";
+    function showUpdateBanner() {
+      updateBanner.style.display = "block";
+      promoBanner.style.display = "none";
+      setTimeout(showPromoBanner, 5000);
     }
 
-    // Promo and update banner slide
-    const promo = document.getElementById("promo");
-    const update = document.getElementById("update");
+    function showPromoBanner() {
+      promoBanner.style.display = "block";
+      updateBanner.style.display = "none";
+      setTimeout(showUpdateBanner, 10000);
+    }
 
-    promo.style.display = "block";
-    setTimeout(() => {
-      promo.style.display = "none";
-      update.style.display = "block";
-      setTimeout(() => update.style.display = "none", 5000);
-    }, 10000);
-  </script></body>
-</html>
+    showUpdateBanner();
+  </script></body></html>
